syntax = "proto3";

package api.cms;

import "google/protobuf/any.proto";

option go_package = "edu/api/cms;cms";
option java_multiple_files = true;
option java_package = "api.cms";

message ApiReply {
    int32 code = 1;
    string reason = 2;
    string message = 3;
    int32 ttl = 4;
    int32 count = 5;
    repeated google.protobuf.Any details = 6;
}

message Help {}

message HelpCategory {}